[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
byteorder = "1.4"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3"
rand = "0.8"