[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.9.0"                                  # helps manage buffers
thiserror = "2.0.9"                             # error handling
byteorder = "1.4"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
env_logger = "0.11.6"
log = "0.4"
once_cell = "1.18.0"